full-moon/tests/cfxlua_cases/fail/parser/multiplication_assignment_operator/error_display.snap
---
source: full-moon/tests/fail_cases.rs
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cfxlua_cases/fail/parser/multiplication_assignment_operator
---
error[ast]: expected expression to set to
  ┌─ source.lua:2:6
  │
2 │ base *=
  │      ^^
